# 2021ESWContest_free_1144

opencv/src/: test.cpp
trailer_reversing_assistance_system/auto_drive/: CMakeLists.txt  package.xml
trailer_reversing_assistance_system/auto_drive/launch/: auto_drive_predefined.launch  auto_drive_vision.launch
trailer_reversing_assistance_system/auto_drive/src/: inverse_kinematics_auto.cpp
trailer_reversing_assistance_system/predefined_path/: CMakeLists.txt  package.xml
trailer_reversing_assistance_system/predefined_path/src/: predefined_path_planning.cpp
trailer_reversing_assistance_system/ros_gui/: CMakeLists.txt
trailer_reversing_assistance_system/ros_gui/include/: ros_connect.h  ros_image.h
trailer_reversing_assistance_system/ros_gui/launch/: gui_trailer.launch
trailer_reversing_assistance_system/ros_gui/src/: gui_streaming.cpp  gui_wheel.cpp
trailer_reversing_assistance_system/ros_gui/src/qml/: TRAS_GUI.qml  TrailerUI.ui.qml  qml_.qrc
trailer_reversing_assistance_system/ros_joy/: CMakeLists.txt  package.xml
trailer_reversing_assistance_system/ros_joy/launch/: joy_trailer.launch  step_input_test.launch
trailer_reversing_assistance_system/ros_joy/src/: joy_node.cpp  sim_node.cpp  step_input_test.cpp
trailer_reversing_assistance_system/simulation_tras/: CMakeLists.txt  package.xml
trailer_reversing_assistance_system/simulation_tras/launch/: gazebo.launch  gazebo_auto.launch
trailer_reversing_assistance_system/simulation_tras/src/: pos_error_pub.cpp  trailer_path_planning.cpp
trailer_reversing_assistance_system/user_drive/: CMakeLists.txt  package.xml
trailer_reversing_assistance_system/vision_path_planning/: CMakeLists.txt  package.xml
(+6 files in other folders)
